# card-playroom-server

./: "shocky"_copy."jpg"  "splatoon2-kurage-bizen1"_copy."jpg"  .env.example  .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bugfix_request.md  modify_request.md
.github/workflows/: docker-push.yml  rust.yaml
.release/: Dockerfile  docker-compose.yml  install.sh  run.sh
migrations/00000000000000_diesel_initial_setup/: up.sql
src/: admin.rs  card.rs  codec.rs  deck.rs  edit_deck.rs  graphql.rs  index.rs  main.rs  models.rs  schema.graphql  schema.rs  upload.rs  websocket.rs  ws_actors.rs  ws_session.rs
src/websocket/: codec.rs  room_manager.rs  tcp_session.rs  websocket_session.rs
templates/: base.html  card.html  deck.html  edit-deck.html  edit.html  image.html  index.html  upload.html
