[package]
name = "card-playroom-server"
version = "0.1.0"
authors = ["bana118 <bana.titech@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-cors = "0.5"
# actix-service = "1.0.0"
# futures = "0.3.1"
env_logger = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# json = "0.12"
dotenv = "0.15"
juniper = "0.14"
# diesel = "1"
# actix-web-actors = "3"
rand = "0.7"
