[package]
name = "card-playroom-server"
version = "0.1.0"
authors = ["bana118 <bana.titech@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-cors = "0.5"
actix-multipart = "0.3"
actix-files = "0.4"
actix-codec = "0.3"
# actix-service = "1.0.0"
futures = "0.3.1"
sanitize-filename = "0.2"
env_logger = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# json = "0.12"
uuid = { version = "0.8", features = ["serde", "v4"] }
dotenv = "0.15"
juniper = "0.14"
juniper-from-schema = "0.5"
juniper-eager-loading = "0.5"
diesel = { version = "1", features = ["postgres", "r2d2"] }
actix-web-actors = "3"
r2d2 = "0.8"
rand = "0.7"
bytes = "0.5.3"
byteorder = "1.2"
itertools = "0.9"
tera = "1"
tokio = "0.2.4"
tokio-util = "0.3"
